[gd_scene load_steps=28 format=2]

[ext_resource path="res://screens/gameScene/game.gd" type="Script" id=1]
[ext_resource path="res://sprites/images/blueBackground.png" type="Texture" id=2]
[ext_resource path="res://sprites/texts/gameQuestion.png" type="Texture" id=3]
[ext_resource path="res://sprites/images/3Porquinhos/Parte1.jpg" type="Texture" id=4]
[ext_resource path="res://sprites/images/shadow.png" type="Texture" id=5]
[ext_resource path="res://sprites/images/button.png" type="Texture" id=6]
[ext_resource path="res://sprites/images/pin.png" type="Texture" id=7]
[ext_resource path="res://sprites/images/3Porquinhos/Parte3.jpg" type="Texture" id=8]
[ext_resource path="res://sprites/images/pause2.png" type="Texture" id=9]
[ext_resource path="res://screens/animations/optionsAnimation.tscn" type="PackedScene" id=10]
[ext_resource path="res://screens/popUps/pause.tscn" type="PackedScene" id=11]
[ext_resource path="res://screens/popUps/wrongAnswerPopUp.tscn" type="PackedScene" id=12]
[ext_resource path="res://KGSecondChancesSketch.ttf" type="DynamicFontData" id=13]
[ext_resource path="res://screens/musicPlayer.gd" type="Script" id=14]
[ext_resource path="res://sprites/images/whiteBackground.png" type="Texture" id=15]
[ext_resource path="res://sprites/texts/OuvirTrecho.png" type="Texture" id=16]
[ext_resource path="res://sprites/images/soundOn.png" type="Texture" id=17]
[ext_resource path="res://screens/animations/slide.tres" type="Animation" id=18]
[ext_resource path="res://screens/animations/zoomClick2.tres" type="Animation" id=19]
[ext_resource path="res://sprites/images/innerCircle.png" type="Texture" id=20]
[ext_resource path="res://sprites/images/click.png" type="Texture" id=21]
[ext_resource path="res://sprites/images/outerCircle.png" type="Texture" id=22]







[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 13 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 13 )

[sub_resource type="Animation" id=3]
resource_name = "tip"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect2:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -311, 121.758 ), Vector2( -311, 30 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect2:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ColorRect2/Label:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 155.084, 11.6313 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ColorRect2/Label:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "tip2"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect2:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -311, -570.951 ), Vector2( -311, -479.193 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect2/Label:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 155.084, 11.6313 ), Vector2( 155.084, 11.6313 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ColorRect2/Label:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ColorRect2:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="DynamicFont" id=5]
size = 24
font_data = ExtResource( 13 )

[node name="Node2D" type="Node2D"]
position = Vector2( 311.46, 479.467 )
script = ExtResource( 1 )

[node name="BlueBackground" type="ColorRect" parent="."]
margin_left = -312.0
margin_top = -480.0
margin_right = 713.0
margin_bottom = 121.0
color = Color( 0.611765, 0.862745, 0.972549, 0.905882 )

[node name="paintedBlueBackground" type="Sprite" parent="."]
position = Vector2( 199.376, -178.53 )
scale = Vector2( 2.5435, 0.585815 )
texture = ExtResource( 2 )

[node name="text" type="Sprite" parent="."]
position = Vector2( 51.514, -444.935 )
scale = Vector2( 0.209408, 0.209408 )
texture = ExtResource( 3 )

[node name="polaroid3" type="TouchScreenButton" parent="."]
editor/display_folded = true
position = Vector2( -183.242, -400.987 )
rotation = 0.174533
scale = Vector2( 0.294198, 0.294198 )
normal = ExtResource( 4 )

[node name="shadowPolaroid3" type="Sprite" parent="polaroid3"]
position = Vector2( 615.91, 681.128 )
rotation = 1.94768e-008
scale = Vector2( 3.06029, 3.0423 )
texture = ExtResource( 5 )

[node name="polaroid2" type="TouchScreenButton" parent="polaroid3"]
position = Vector2( -274.233, 229.026 )
rotation = -0.349066
scale = Vector2( 1.00446, 1.00446 )
normal = ExtResource( 4 )

[node name="shadowPolaroid2" type="Sprite" parent="polaroid3"]
position = Vector2( 540.213, 660.054 )
rotation = -0.349066
scale = Vector2( 3.07865, 3.04987 )
texture = ExtResource( 5 )

[node name="polaroid1" type="TouchScreenButton" parent="polaroid3"]
position = Vector2( -152.492, 142.144 )
rotation = -0.174533
scale = Vector2( 1.00476, 1.00476 )
normal = ExtResource( 4 )

[node name="shadowPolaroid1" type="Sprite" parent="polaroid3"]
self_modulate = Color( 1, 1, 1, 0.894118 )
position = Vector2( 575.563, 705.084 )
rotation = -0.174533
scale = Vector2( 3.04095, 3.06217 )
texture = ExtResource( 5 )

[node name="half1_1" type="TouchScreenButton" parent="polaroid3"]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( -157.656, 151.56 )
rotation = -0.174533
scale = Vector2( 3.31684, 8.68926 )
normal = ExtResource( 6 )

[node name="half1_2" type="TouchScreenButton" parent="polaroid3"]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( -43.5246, 802.512 )
rotation = -0.174533
scale = Vector2( 3.31684, 8.12037 )
normal = ExtResource( 6 )
passby_press = true

[node name="pin" type="Sprite" parent="polaroid3"]
position = Vector2( 400.623, 30.5321 )
rotation = -0.174533
scale = Vector2( 2.2487, 2.2487 )
texture = ExtResource( 7 )

[node name="polaroid3_2" type="TouchScreenButton" parent="."]
editor/display_folded = true
position = Vector2( 324.144, -400.987 )
rotation = 0.174533
scale = Vector2( 0.295659, 0.295659 )
normal = ExtResource( 4 )

[node name="shadowPolaroid3_2" type="Sprite" parent="polaroid3_2"]
position = Vector2( 612.866, 677.761 )
scale = Vector2( 3.04516, 3.02727 )
texture = ExtResource( 5 )

[node name="polaroid2" type="TouchScreenButton" parent="polaroid3_2"]
position = Vector2( -272.877, 227.894 )
rotation = -0.349066
scale = Vector2( 1.00079, 1.00079 )
normal = ExtResource( 4 )

[node name="shadowPolaroid2" type="Sprite" parent="polaroid3_2"]
position = Vector2( 537.543, 656.791 )
rotation = -0.349066
scale = Vector2( 3.06343, 3.0348 )
texture = ExtResource( 5 )

[node name="polaroid1" type="TouchScreenButton" parent="polaroid3_2"]
position = Vector2( -154.401, 140.76 )
rotation = -0.174533
scale = Vector2( 1.00167, 1.00167 )
normal = ExtResource( 8 )

[node name="shadowPolaroid1" type="Sprite" parent="polaroid3_2"]
self_modulate = Color( 1, 1, 1, 0.894118 )
position = Vector2( 572.719, 701.599 )
rotation = -0.174533
scale = Vector2( 3.02592, 3.04703 )
texture = ExtResource( 5 )

[node name="pin" type="Sprite" parent="polaroid3_2"]
position = Vector2( 415.447, 31.2224 )
rotation = -0.174533
scale = Vector2( 2.23758, 2.23758 )
texture = ExtResource( 7 )

[node name="half2_1" type="TouchScreenButton" parent="polaroid3_2"]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( -153.478, 152.674 )
rotation = -0.174533
scale = Vector2( 3.30044, 8.79717 )
normal = ExtResource( 6 )

[node name="half2_2" type="TouchScreenButton" parent="polaroid3_2"]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( -41.0686, 798.881 )
rotation = -0.174533
scale = Vector2( 3.30044, 8.02487 )
normal = ExtResource( 6 )
passby_press = true

[node name="pause" type="TouchScreenButton" parent="."]
position = Vector2( 641.001, -466.567 )
scale = Vector2( 0.375921, 0.375921 )
normal = ExtResource( 9 )

[node name="optionsAnimation" parent="." instance=ExtResource( 10 )]
visible = false
position = Vector2( -0.00775146, -0.0838013 )
rotation = 1.49012e-008

[node name="pauseScreen" parent="." instance=ExtResource( 11 )]
visible = false
position = Vector2( -0.008, -0.084 )

[node name="wrongAnswer" parent="." instance=ExtResource( 12 )]
visible = false
position = Vector2( 0.931427, 0.516083 )

[node name="Popup" type="Popup" parent="."]
editor/display_folded = true
margin_left = -312.0
margin_top = -480.0
margin_right = 713.0
margin_bottom = 120.0

[node name="blackEffect" type="ColorRect" parent="Popup"]
self_modulate = Color( 0, 0, 0, 0.901961 )
margin_right = 1026.0
margin_bottom = 601.0
color = Color( 0, 0, 0, 0.901961 )

[node name="title" type="Label" parent="Popup"]
margin_left = 415.283
margin_top = 207.632
margin_right = 590.283
margin_bottom = 233.632
custom_fonts/font = SubResource( 1 )
text = "Os 3 porquinhos"

[node name="colorRect1" type="ColorRect" parent="Popup"]
margin_left = 191.809
margin_top = 291.2
margin_right = 192.809
margin_bottom = 381.2
color = Color( 1, 1, 1, 0.901961 )

[node name="colorRect2" type="ColorRect" parent="Popup"]
margin_left = 191.809
margin_top = 206.2
margin_right = 192.809
margin_bottom = 296.2
color = Color( 1, 1, 1, 0.901961 )

[node name="colorRect3" type="ColorRect" parent="Popup"]
margin_left = 829.448
margin_top = 290.343
margin_right = 830.448
margin_bottom = 380.343
color = Color( 1, 1, 1, 0.901961 )

[node name="colorRect4" type="ColorRect" parent="Popup"]
margin_left = 829.448
margin_top = 206.343
margin_right = 830.448
margin_bottom = 296.343
color = Color( 1, 1, 1, 0.901961 )

[node name="colorRect6" type="ColorRect" parent="Popup"]
margin_left = 191.791
margin_top = 379.589
margin_right = 829.791
margin_bottom = 380.589
color = Color( 1, 1, 1, 0.901961 )

[node name="colorRect7" type="ColorRect" parent="Popup"]
margin_left = 191.791
margin_top = 233.589
margin_right = 829.791
margin_bottom = 234.589
color = Color( 1, 1, 1, 0.901961 )

[node name="colorRect8" type="ColorRect" parent="Popup"]
margin_left = 191.791
margin_top = 205.589
margin_right = 829.791
margin_bottom = 206.589
color = Color( 1, 1, 1, 0.901961 )

[node name="ColorRectRed2" type="ColorRect" parent="Popup"]
margin_left = 198.573
margin_top = 281.281
margin_right = 351.573
margin_bottom = 317.281
color = Color( 0.823529, 0.368627, 0.317647, 1 )

[node name="ColorRect" type="ColorRect" parent="Popup"]
margin_left = 351.187
margin_top = 280.567
margin_right = 715.187
margin_bottom = 316.567

[node name="ColorRectRed" type="ColorRect" parent="Popup"]
margin_left = 715.432
margin_top = 281.424
margin_right = 823.432
margin_bottom = 317.424
color = Color( 0.823529, 0.368627, 0.317647, 1 )

[node name="history" type="AudioStreamPlayer" parent="Popup"]
script = ExtResource( 14 )

[node name="goBack" type="TouchScreenButton" parent="Popup/history"]
position = Vector2( 201.524, 288.207 )
scale = Vector2( 0.96, 0.96 )

[node name="play" type="TouchScreenButton" parent="Popup/history"]
position = Vector2( 263.039, 285.905 )
scale = Vector2( 0.96, 0.96 )

[node name="goForward" type="TouchScreenButton" parent="Popup/history"]
position = Vector2( 302.546, 288.03 )
scale = Vector2( 0.96, 0.96 )

[node name="timePassing" type="Label" parent="Popup/history"]
visible = false
margin_left = 725.117
margin_top = 279.788
margin_right = 813.117
margin_bottom = 318.788
custom_fonts/font = SubResource( 2 )
text = "00:00"

[node name="playerExibition" type="ColorRect" parent="Popup/history"]
visible = false
margin_left = 358.803
margin_top = 289.685
margin_right = 364.803
margin_bottom = 306.685
color = Color( 0.823529, 0.368627, 0.317647, 1 )

[node name="Timer" type="Timer" parent="Popup/history"]

[node name="keepPlaying" type="TouchScreenButton" parent="Popup/history"]
position = Vector2( 372.746, 325.133 )
scale = Vector2( 0.228871, 0.228871 )

[node name="ColorRect" type="ColorRect" parent="."]
editor/display_folded = true
self_modulate = Color( 1, 1, 1, 0.560784 )
margin_left = -311.487
margin_top = 54.6667
margin_right = -54.4866
margin_bottom = 103.667

[node name="ouvirTrecho" type="TouchScreenButton" parent="ColorRect"]
position = Vector2( -11.3418, -5.12964 )
scale = Vector2( 0.251322, 0.121462 )
normal = ExtResource( 15 )

[node name="Sprite" type="Sprite" parent="ColorRect"]
position = Vector2( 106.302, 22.5098 )
scale = Vector2( 0.220011, 0.220011 )
texture = ExtResource( 16 )

[node name="Sprite2" type="Sprite" parent="ColorRect"]
position = Vector2( 231.552, 23.3444 )
scale = Vector2( 0.215451, 0.215451 )
texture = ExtResource( 17 )

[node name="history" type="AudioStreamPlayer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/slide = ExtResource( 18 )
anims/tip = SubResource( 3 )
anims/tip2 = SubResource( 4 )
anims/zoomClick2 = ExtResource( 19 )

[node name="innerClick" type="Sprite" parent="."]
visible = false
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( 441.525, -198.479 )
scale = Vector2( 0.225, 0.225 )
texture = ExtResource( 20 )

[node name="click" type="Sprite" parent="."]
visible = false
position = Vector2( 470.512, -111.111 )
scale = Vector2( 0.342102, 0.342102 )
texture = ExtResource( 21 )

[node name="outerClick" type="Sprite" parent="."]
visible = false
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( 442.013, -197.991 )
scale = Vector2( 0.225, 0.225 )
texture = ExtResource( 22 )

[node name="ColorRect2" type="ColorRect" parent="."]
visible = false
margin_left = -311.0
margin_top = -479.193
margin_right = 712.0
margin_bottom = -388.193

[node name="Label" type="Label" parent="ColorRect2"]
margin_left = 149.915
margin_top = 21.9703
margin_right = 913.915
margin_bottom = 88.9703
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Para dar zoom, dê um clique na polaroid. Vamos lá, tente!"
align = 1

[connection signal="pressed" from="polaroid3/half1_1" to="." method="_on_half1_1_pressed"]
[connection signal="pressed" from="polaroid3/half1_2" to="." method="_on_half1_2_pressed"]
[connection signal="pressed" from="polaroid3_2/half2_1" to="." method="_on_half2_1_pressed"]
[connection signal="pressed" from="polaroid3_2/half2_2" to="." method="_on_half2_2_pressed"]
[connection signal="pressed" from="pause" to="." method="_on_pause_pressed"]
[connection signal="pressed" from="Popup/history/goBack" to="Popup/history" method="_on_goBack_pressed"]
[connection signal="pressed" from="Popup/history/play" to="Popup/history" method="_on_play_pressed"]
[connection signal="pressed" from="Popup/history/goForward" to="Popup/history" method="_on_goForward_pressed"]
[connection signal="pressed" from="Popup/history/keepPlaying" to="Popup/history" method="_on_keepPlaying_pressed"]
[connection signal="pressed" from="ColorRect/ouvirTrecho" to="." method="_on_ouvirTrecho_pressed"]
